Change Notes
=============

2009-10-20 FLI
	- Added "Test" of expressions into mapping editor.
	
2009-10-13 jbornema
	- JDBCLoader keeps in batch mode the records to be able to throw specific exception when
	  SQLException occurs
	- ETLgineServer.loadJob(String scriptName) added used by Launch class to dynamic load scripts
	- ETLgineServer sets system property "etlgine_rootPath" to the root path during initialization,
	  so this property can be used in jetty configuration xml
	- DbColumnDef.typeName added
	- JDBCLoader.autoAlterColumns property added that alters automatically increased column char field length
	  when required 

2009-10-07 jbornema
	- DataPoolInitializerUtil.ensureCube(...) converts CubeFlexCalc to CubePreCache if requested.

2009-10-06 jbornema
	- JdbcLoader SEVERE bug fixed in batch mode: each loop dropped the current record: very bad - this is fixed now.
	- IJobFinalizer added invoked when job is finished.
	- EmptyExtractor added useful when no data need to be processed.
	- SaveDataPoolFinalizer added that saves the data pool when job is finished.
	- URLFileSource added, useful in test cases to use classpath resource as FileSource.
	- BooleanTransformer and universal NumberTransformer added.
	
2009-08-07 FLI
	- MoveFileFinalizer no longer sets status to FINISHED_WITH_ERRORS if a file that should get moved does not exist.
	
2009-08-03 FLI
	- CubeLoader prints a warning if data is written into a non-leaf element (splash)
	- ETLgine Mapping-Admin: non-leaf elements are now printed in blue in the mapping table. 
	- Added "Delete Cube" action in cube details viewer.
	- added clear action to cube details view.
	- now displays measures on the bottom of the datapool detail view
	
2009-07-28 FLI
	- Added auto-create unmapped elements feature
	- Moved cube-clear back into preSourceProcessing event. The movement caused imports to fail as these determine the
	  dimensions to be cleared from the source.

2009-07-17 jbornema